--- a/phytestpage.html
+++ b/phytestpage.html
@@ -45,102 +45,105 @@
 </head>
 <body>
 
-<div class="container">
+    <div class="container">
         <h2> IGNITTE PHYSICS TEST </h2>
+        <p id="testMessage" class="message"></p>
 
-        <!-- Questions (MCQs & Integer Type) -->
-        <div class="question">
-            <p><b>1️⃣ Question:</b></p>
-            <img src="mc1.png" alt="MCQ 1">
-            <br>
-            <input type="radio" name="mc1" value="A"> A
-            <input type="radio" name="mc1" value="B"> B
-            <input type="radio" name="mc1" value="C"> C
-            <input type="radio" name="mc1" value="D"> D
-        </div>
+        <div id="testContent" class="hidden">
+            <!-- MCQ Questions -->
+            <div class="question">
+                <p><b>1️⃣</b></p>
+                <img src="mc1.png" alt="MCQ 1">
+                <br>
+                <input type="radio" name="mc1" value="A"> A
+                <input type="radio" name="mc1" value="B"> B
+                <input type="radio" name="mc1" value="C"> C
+                <input type="radio" name="mc1" value="D"> D
+            </div>
 
-        <!-- Repeat for mc2 to mc7 -->
-        <div class="question">
-            <p><b>2️⃣ Question:</b></p>
-            <img src="mc2.png" alt="MCQ 2">
-            <br>
-            <input type="radio" name="mc2" value="A"> A
-            <input type="radio" name="mc2" value="B"> B
-            <input type="radio" name="mc2" value="C"> C
-            <input type="radio" name="mc2" value="D"> D
-        </div>
+            <div class="question">
+                <p><b>2️⃣</b></p>
+                <img src="mc2.png" alt="MCQ 2">
+                <br>
+                <input type="radio" name="mc2" value="A"> A
+                <input type="radio" name="mc2" value="B"> B
+                <input type="radio" name="mc2" value="C"> C
+                <input type="radio" name="mc2" value="D"> D
+            </div>
 
-        <div class="question">
-            <p><b>3️⃣ Question:</b></p>
-            <img src="mc3.png" alt="MCQ 3">
-            <br>
-            <input type="radio" name="mc3" value="A"> A
-            <input type="radio" name="mc3" value="B"> B
-            <input type="radio" name="mc3" value="C"> C
-            <input type="radio" name="mc3" value="D"> D
-        </div>
+            <div class="question">
+                <p><b>3️⃣</b></p>
+                <img src="mc3.png" alt="MCQ 3">
+                <br>
+                <input type="radio" name="mc3" value="A"> A
+                <input type="radio" name="mc3" value="B"> B
+                <input type="radio" name="mc3" value="C"> C
+                <input type="radio" name="mc3" value="D"> D
+            </div>
 
-        <div class="question">
-            <p><b>4️⃣ Question:</b></p>
-            <img src="mc4.png" alt="MCQ 4">
-            <br>
-            <input type="radio" name="mc4" value="A"> A
-            <input type="radio" name="mc4" value="B"> B
-            <input type="radio" name="mc4" value="C"> C
-            <input type="radio" name="mc4" value="D"> D
-        </div>
+            <div class="question">
+                <p><b>4️⃣</b></p>
+                <img src="mc4.png" alt="MCQ 4">
+                <br>
+                <input type="radio" name="mc4" value="A"> A
+                <input type="radio" name="mc4" value="B"> B
+                <input type="radio" name="mc4" value="C"> C
+                <input type="radio" name="mc4" value="D"> D
+            </div>
 
-        <div class="question">
-            <p><b>5️⃣ Question:</b></p>
-            <img src="mc5.png" alt="MCQ 5">
-            <br>
-            <input type="radio" name="mc5" value="A"> A
-            <input type="radio" name="mc5" value="B"> B
-            <input type="radio" name="mc5" value="C"> C
-            <input type="radio" name="mc5" value="D"> D
-        </div>
+            <div class="question">
+                <p><b>5️⃣</b></p>
+                <img src="mc5.png" alt="MCQ 5">
+                <br>
+                <input type="radio" name="mc5" value="A"> A
+                <input type="radio" name="mc5" value="B"> B
+                <input type="radio" name="mc5" value="C"> C
+                <input type="radio" name="mc5" value="D"> D
+            </div>
 
-        <div class="question">
-            <p><b>6️⃣ Question:</b></p>
-            <img src="mc6.png" alt="MCQ 6">
-            <br>
-            <input type="radio" name="mc6" value="A"> A
-            <input type="radio" name="mc6" value="B"> B
-            <input type="radio" name="mc6" value="C"> C
-            <input type="radio" name="mc6" value="D"> D
-        </div>
+            <div class="question">
+                <p><b>6️⃣</b></p>
+                <img src="mc6.png" alt="MCQ 6">
+                <br>
+                <input type="radio" name="mc6" value="A"> A
+                <input type="radio" name="mc6" value="B"> B
+                <input type="radio" name="mc6" value="C"> C
+                <input type="radio" name="mc6" value="D"> D
+            </div>
 
-        <div class="question">
-            <p><b>7️⃣ Question:</b></p>
-            <img src="mc7.png" alt="MCQ 7">
-            <br>
-            <input type="radio" name="mc7" value="A"> A
-            <input type="radio" name="mc7" value="B"> B
-            <input type="radio" name="mc7" value="C"> C
-            <input type="radio" name="mc7" value="D"> D
-        </div>
+            <div class="question">
+                <p><b>7️⃣</b></p>
+                <img src="mc7.png" alt="MCQ 7">
+                <br>
+                <input type="radio" name="mc7" value="A"> A
+                <input type="radio" name="mc7" value="B"> B
+                <input type="radio" name="mc7" value="C"> C
+                <input type="radio" name="mc7" value="D"> D
+            </div>
 
-        <!-- Integer Type Questions -->
-        <div class="question">
-            <p><b>8️⃣ Integer Type:</b></p>
-            <img src="in1.png" alt="Integer 1">
-            <br>
-            <input type="number" name="in1" placeholder="Enter your answer">
-        </div>
+            <!-- Integer Type Questions -->
+            <div class="question">
+                <p><b>8️⃣</b></p>
+                <img src="in1.png" alt="Integer 1">
+                <br>
+                <input type="number" name="in1">
+            </div>
 
-        <div class="question">
-            <p><b>9️⃣ Integer Type:</b></p>
-            <img src="in2.png" alt="Integer 2">
-            <br>
-            <input type="number" name="in2" placeholder="Enter your answer">
-        </div>
+            <div class="question">
+                <p><b>9️⃣</b></p>
+                <img src="in2.png" alt="Integer 2">
+                <br>
+                <input type="number" name="in2">
+            </div>
 
-        <div class="question">
-            <p><b>🔟 Integer Type:</b></p>
-            <img src="in3.png" alt="Integer 3">
-            <br>
-            <input type="number" name="in3" placeholder="Enter your answer">
+            <div class="question">
+                <p><b>🔟</b></p>
+                <img src="in3.png" alt="Integer 3">
+                <br>
+                <input type="number" name="in3">
+            </div>
         </div>
+    </div>
 
     <script>
         function checkTime() {
