--- a/mathtestpage.html
+++ b/mathtestpage.html
@@ -47,7 +47,7 @@
 <body>
 
     <div class="container">
-        <h2> IGNITTE FINAL TEST </h2>
+        <h2> MATHEMATICS TEST </h2>
         <p id="testMessage" class="message"></p>
 
         <div id="testContent" class="hidden">
